--- a/LogInPage/css/style.css
+++ b/LogInPage/css/style.css
@@ -6,15 +6,17 @@
 .form {
   position: relative;
   padding: 40px;
-  width: 400px;
-  margin: 40px auto;
+  width: 1000px;
+  margin: auto;
+	display: block;
   border-radius: 4px;
   box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
 	font-family: 'Asap', sans-serif;
   background: #F9E79F;
   text-align: center;
+	align-content: center;
   height: 500px;
-  vertical-align: middle;  
+  vertical-align: middle;
   overflow: scroll;
 }
 
@@ -28,7 +30,7 @@
 	background: #FCF3CF;
 }
 
-#btn {	
+#btn {
  	font-family: 'Asap', sans-serif;
  	width:200px;
  	padding: 10px;
@@ -47,7 +49,7 @@ background-image: url("imgs/1.jpeg");
 color:white;
 font-weight: bold;
 width:400px;
-height: 25%;
+height: 100px;
 font-size:20px;
 text-transform: uppercase;
 text-align: left;
@@ -59,7 +61,7 @@ background-image: url(imgs/2.jpeg);
 color:white;
 font-weight: bold;
 width:400px;
-height: 25%;
+height:100px;
 font-size:20px;
 text-transform: uppercase;
 text-align: left;
@@ -72,19 +74,19 @@ background-size: 100%;
 color:white;
 font-weight: bold;
 width:400px;
-height: 25%;
+height: 100px;
 font-size:20px;
 text-transform: uppercase;
 text-align: left;
 }
 
-  .myButton4 {
-  font-family: 'Asap', sans-serif;  
+  /*.myButton4 {
+  font-family: 'Asap', sans-serif;
 background-image: url(imgs/4.jpeg);
 background-size: 100%;
 color:white;width:400px;
-height: 25%;
+height: 100px;
 font-size:20px;
 text-transform: uppercase;
 text-align: left;
-  }
+  }*/
